--- a/DigimonCardBattleDatabase/Pages/Fusion.razor
+++ b/DigimonCardBattleDatabase/Pages/Fusion.razor
@@ -4,7 +4,7 @@
 @using DigimonCardBattleDatabase.Classes
 
 <PageTitle>Fusion</PageTitle>
-@if (data == null)
+@if (data == null || CardId < 0)
 {
     <p><em>Loading...</em></p>
 }
