--- a/DigimonCardBattleDatabase/Shared/NavMenu.razor
+++ b/DigimonCardBattleDatabase/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fusion">
+            <NavLink class="nav-link" href="fusion\-1">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fusion
             </NavLink>
         </div>
