--- a/DigimonCardBattleDatabase/Pages/FetchData.razor
+++ b/DigimonCardBattleDatabase/Pages/FetchData.razor
@@ -3,9 +3,9 @@
 @using DigimonCardBattleDatabase.Components
 @using DigimonCardBattleDatabase.Classes
 
-<PageTitle>Weather forecast</PageTitle>
+<PageTitle>Card Database</PageTitle>
 
-<h1>Weather forecast</h1>
+<h1>Cards!!</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
